@@ -18,6 +18,7 @@
  */
 package is.codion.framework.demos.chinook.client.loadtest.scenarios;
 
+import is.codion.common.model.loadtest.LoadTest.Scenario.Performer;
 import is.codion.framework.db.EntityConnection;
 import is.codion.framework.db.EntityConnectionProvider;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Album;
@@ -25,7 +26,6 @@ import is.codion.framework.demos.chinook.domain.api.Chinook.Artist;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Track;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Track.RaisePriceParameters;
 import is.codion.framework.domain.entity.Entity;
-import is.codion.swing.common.model.tools.loadtest.AbstractUsageScenario;
 
 import java.math.BigDecimal;
 import java.util.Collection;
@@ -34,19 +34,19 @@ import java.util.List;
 import static is.codion.framework.db.EntityConnection.Select.where;
 import static is.codion.framework.demos.chinook.client.loadtest.scenarios.LoadTestUtil.randomArtistId;
 
-public final class RaisePrices extends AbstractUsageScenario<EntityConnectionProvider> {
+public final class RaisePrices implements Performer<EntityConnectionProvider> {
 
   private static final BigDecimal PRICE_INCREASE = BigDecimal.valueOf(0.01);
 
   @Override
-  protected void perform(EntityConnectionProvider connectionProvider) throws Exception {
+  public void perform(EntityConnectionProvider connectionProvider) throws Exception {
     EntityConnection connection = connectionProvider.connection();
     Entity artist = connection.selectSingle(Artist.ID.equalTo(randomArtistId()));
     List<Entity> albums = connection.select(where(Album.ARTIST_FK.equalTo(artist))
             .limit(1)
             .build());
     if (!albums.isEmpty()) {
-      List<Entity> tracks = connection.select(Track.ALBUM_FK.equalTo(albums.getFirst()));
+      List<Entity> tracks = connection.select(Track.ALBUM_FK.equalTo(albums.get(0)));
       Collection<Long> trackIds = Entity.values(Track.ID, tracks);
       connection.execute(Track.RAISE_PRICE, new RaisePriceParameters(trackIds, PRICE_INCREASE));
     }
