@@ -19,24 +19,25 @@
 package is.codion.framework.demos.chinook.client.loadtest.scenarios;
 
 import is.codion.common.db.exception.DatabaseException;
+import is.codion.common.model.loadtest.LoadTest.Scenario.Performer;
 import is.codion.framework.db.EntityConnection;
 import is.codion.framework.db.EntityConnectionProvider;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Customer;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Invoice;
 import is.codion.framework.demos.chinook.domain.api.Chinook.InvoiceLine;
 import is.codion.framework.domain.entity.Entity;
-import is.codion.swing.common.model.tools.loadtest.AbstractUsageScenario;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static is.codion.framework.demos.chinook.client.loadtest.scenarios.LoadTestUtil.RANDOM;
 import static is.codion.framework.demos.chinook.client.loadtest.scenarios.LoadTestUtil.randomCustomerId;
 
-public final class UpdateTotals extends AbstractUsageScenario<EntityConnectionProvider> {
+public final class UpdateTotals implements Performer<EntityConnectionProvider> {
 
   @Override
-  protected void perform(EntityConnectionProvider connectionProvider) throws Exception {
+  public void perform(EntityConnectionProvider connectionProvider) throws Exception {
     EntityConnection connection = connectionProvider.connection();
     Entity customer = connection.selectSingle(Customer.ID.equalTo(randomCustomerId()));
     List<Long> invoiceIds = connection.select(Invoice.ID, Invoice.CUSTOMER_FK.equalTo(customer));
@@ -47,7 +48,7 @@ public final class UpdateTotals extends AbstractUsageScenario<EntityConnectionPr
               invoiceLine.put(InvoiceLine.QUANTITY, RANDOM.nextInt(4) + 1));
       updateInvoiceLines(invoiceLines.stream()
               .filter(Entity::modified)
-              .toList(), connection);
+              .collect(Collectors.toList()), connection);
     }
   }
 
