@@ -18,35 +18,30 @@
  */
 package is.codion.framework.demos.chinook.client.loadtest.scenarios;
 
+import is.codion.common.model.loadtest.LoadTest.Scenario.Performer;
 import is.codion.framework.db.EntityConnection;
 import is.codion.framework.db.EntityConnectionProvider;
 import is.codion.framework.demos.chinook.domain.api.Chinook;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Album;
 import is.codion.framework.demos.chinook.domain.api.Chinook.Artist;
 import is.codion.framework.domain.entity.Entity;
-import is.codion.swing.common.model.tools.loadtest.AbstractUsageScenario;
 
 import java.util.List;
 
 import static is.codion.framework.db.EntityConnection.Select.where;
 import static is.codion.framework.demos.chinook.client.loadtest.scenarios.LoadTestUtil.randomArtistId;
 
-public final class ViewAlbum extends AbstractUsageScenario<EntityConnectionProvider> {
+public final class ViewAlbum implements Performer<EntityConnectionProvider> {
 
   @Override
-  protected void perform(EntityConnectionProvider connectionProvider) throws Exception {
+  public void perform(EntityConnectionProvider connectionProvider) throws Exception {
     EntityConnection connection = connectionProvider.connection();
     Entity artist = connection.selectSingle(Artist.ID.equalTo(randomArtistId()));
     List<Entity> albums = connection.select(where(Album.ARTIST_FK.equalTo(artist))
             .limit(1)
             .build());
     if (!albums.isEmpty()) {
-      connection.select(Chinook.Track.ALBUM_FK.equalTo(albums.getFirst()));
+      connection.select(Chinook.Track.ALBUM_FK.equalTo(albums.get(0)));
     }
-  }
-
-  @Override
-  public int defaultWeight() {
-    return 10;
   }
 }
